<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="5dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/logoIv"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/containerComponentsVw"/>

        <View
            android:id="@+id/containerComponentsVw"
            style="@style/ContainerComponents"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoIv"
            />

        <EditText
            android:id="@+id/emailEt"
            style="@style/Edit_Text"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:drawableRight="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@id/containerComponentsVw"
            app:layout_constraintEnd_toEndOf="@id/containerComponentsVw"
            app:layout_constraintTop_toTopOf="@id/containerComponentsVw"/>

        <EditText
            android:id="@+id/senhaEt"
            style="@style/Edit_Text"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:drawableRight="@drawable/ic_eye"
            app:layout_constraintStart_toStartOf="@id/containerComponentsVw"
            app:layout_constraintEnd_toEndOf="@id/containerComponentsVw"
            app:layout_constraintTop_toBottomOf="@id/emailEt"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logarBtn"
            style="@style/Button"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senhaEt"/>

        <TextView
            android:id="@+id/cadastrarTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponentsVw"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>